# jebediah

./: .gitmodules  README  README.md  ambiata-jebediah.cabal  ambiata-jebediah.lock-7.10.2  ambiata-jebediah.lock-8.0.1  bar.txt  boris.toml  jebediah.cabal  jebediah.lock-7.10.2  jebediah.lock-7.8.4  jebediah.lock-8.0.1  mafia  master.toml
main/: jebediah.hs
src/: Jebediah.hs
src/Jebediah/: Conduit.hs  Control.hs  Data.hs  File.hs  Single.hs  Structure.hs
test/: test-cli.hs  test-io.hs  test.hs
test/Test/IO/Jebediah/: Conduit.hs  File.hs  Structure.hs
test/Test/Jebediah/: Arbitrary.hs  Data.hs
