name:                  ambiata-jebediah
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Cloudwatch logs cat tools
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           jebediah

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-mismi-cloudwatch-logs
                     , ambiata-x-exception
                     , ambiata-x-eithert
                     , conduit
                     , lens                            >= 4.8        && < 4.10
                     , text                            == 1.2.*
                     , time                            == 1.5.*
                     , old-locale                      == 1.0.*
                     , transformers                    >= 0.3.1      && < 0.5

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Jebediah
                    Jebediah.Control
                    Jebediah.Data

executable jebediah
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/jebediah.hs

  build-depends:
                      base
                    , ambiata-jebediah
                    , ambiata-p
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , ambiata-mismi-core
                    , ambiata-mismi-cloudwatch-logs
                    , attoparsec
                    , conduit
                    , directory                       == 1.2.*
                    , optparse-applicative
                    , lens
                    , text
                    , time
                    , transformers


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-jebediah
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-jebediah
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , text
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-cli
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-cli.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-jebediah
                    , ambiata-disorder-core
