name:                  ambiata-jebediah
version:               0.0.1
license:               BSD3
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Cloudwatch logs cat tools
category:              System
cabal-version:         >= 1.8
build-type:            Custom
description:           jebediah

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-mismi-core
                     , ambiata-mismi-cloudwatch-logs
                     , ambiata-twine
                     , ambiata-x-exception
                     , ambiata-x-eithert
                     , async                           >= 2.0        && < 2.2
                     , bytestring                      == 0.10.*
                     , conduit                         == 1.2.*
                     , conduit-combinators             == 1.0.*
                     , conduit-extra                   == 1.1.*
                     , exceptions                      >= 0.6        && < 0.9
                     , filepath                        >= 1.3        && < 1.5
                     , lens                            >= 4.8        && < 4.15
                     , nats                            == 1.1.*
                     , resourcet                       == 1.1.*
                     , semigroups                      >= 0.16       && < 0.19
                     , stm                             == 2.4.*
                     , stm-chans                       == 3.0.*
                     , text                            == 1.2.*
                     , time                            >= 1.2        && < 1.7
                     , old-locale                      == 1.0.*
                     , transformers                    >= 0.3.1      && < 0.6
                     , unix                            == 2.7.*
                     , unix-bytestring                 == 0.3.7.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Jebediah.Conduit
                    Jebediah.Data
                    Jebediah.File
                    Jebediah.Single
                    Jebediah.Structure


executable jebediah
  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    gen

  main-is:
                    ../main/jebediah.hs

  build-depends:
                      base
                    , ambiata-jebediah

                    , ambiata-mismi-core
                    , ambiata-mismi-cloudwatch-logs
                    , ambiata-p
                    , ambiata-twine
                    , ambiata-x-eithert
                    , ambiata-x-optparse
                    , attoparsec
                    , conduit
                    , directory                       == 1.2.*
                    , optparse-applicative
                    , lens
                    , resourcet
                    , text
                    , time
                    , transformers
                    , unix-bytestring                 == 0.3.7.*


test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-jebediah
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core
                    , ambiata-mismi-cloudwatch-logs
                    , ambiata-p
                    , ambiata-twine
                    , ambiata-x-eithert
                    , conduit
                    , exceptions
                    , nats
                    , resourcet
                    , text
                    , time
                    , QuickCheck                      >= 2.7        && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-jebediah
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core
                    , ambiata-mismi-cloudwatch-logs
                    , ambiata-p
                    , ambiata-twine
                    , ambiata-x-eithert
                    , bytestring
                    , conduit
                    , exceptions
                    , filepath
                    , nats
                    , resourcet
                    , temporary                       == 1.2.*
                    , text
                    , time
                    , QuickCheck                      >= 2.7        && < 2.9
                    , quickcheck-instances            == 0.3.*
